# image-classification-poc

./: .gitignore  README.md  pyproject.toml
yolov8/: __init__.py  __main__.py
